--- a/Ensemble.ipynb
+++ b/Ensemble.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,13 @@
     "from sklearn import model_selection\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.svm import SVC\n",
-    "from sklearn.ensemble import VotingClassifier, RandomForestClassifier"
+    "from sklearn.ensemble import VotingClassifier, RandomForestClassifier\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +34,7 @@
        "Index(['N', 'P', 'K', 'temperature', 'humidity', 'ph', 'rainfall', 'label'], dtype='object')"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,11 +95,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "forest = RandomForestClassifier(n_estimators=20, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "knn=KNeighborsClassifier(n_neighbors=6,algorithm='ball_tree')"
    ]
   },
   {
@@ -110,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,19 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
     "estimators = []\n",
     "estimators.append(('Desicion Tree', DecisionTree))\n",
     "estimators.append(('SVM', svc))\n",
-    "estimators.append(('Random Forest', forest))"
+    "estimators.append(('Random Forest', forest))\n",
+    "estimators.append(('kneighbors', knn))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,19 +160,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9554545454545453\n"
+      "0.9286363636363637\n"
      ]
     }
    ],
    "source": [
     "print(results.mean())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Desicion Tree',\n",
+       "  DecisionTreeClassifier(ccp_alpha=0.0, class_weight=None, criterion='entropy',\n",
+       "                         max_depth=7, max_features=None, max_leaf_nodes=None,\n",
+       "                         min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                         min_samples_leaf=1, min_samples_split=2,\n",
+       "                         min_weight_fraction_leaf=0.0, presort='deprecated',\n",
+       "                         random_state=2, splitter='best')),\n",
+       " ('SVM',\n",
+       "  SVC(C=10, break_ties=False, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "      decision_function_shape='ovr', degree=3, gamma=0.01, kernel='rbf',\n",
+       "      max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "      tol=0.001, verbose=False)),\n",
+       " ('Random Forest',\n",
+       "  RandomForestClassifier(bootstrap=True, ccp_alpha=0.0, class_weight=None,\n",
+       "                         criterion='gini', max_depth=None, max_features='auto',\n",
+       "                         max_leaf_nodes=None, max_samples=None,\n",
+       "                         min_impurity_decrease=0.0, min_impurity_split=None,\n",
+       "                         min_samples_leaf=1, min_samples_split=2,\n",
+       "                         min_weight_fraction_leaf=0.0, n_estimators=20,\n",
+       "                         n_jobs=None, oob_score=False, random_state=0, verbose=0,\n",
+       "                         warm_start=False)),\n",
+       " ('kneighbors',\n",
+       "  KNeighborsClassifier(algorithm='ball_tree', leaf_size=30, metric='minkowski',\n",
+       "                       metric_params=None, n_jobs=None, n_neighbors=6, p=2,\n",
+       "                       weights='uniform'))]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimators"
    ]
   },
   {
@@ -188,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
